fix card names to make it more unique